# ChatBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  Dockerfile.streamlit  README.md  cost_analysis_and_optimization.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: chat.py  conversations.py  logs.py
app/core/: chart_analyzer.py  config.py  conversation.py  logger.py  models.py  pipeline.py  rate_limiter.py  week_utils.py
app/db/: connection.py  metabase_client.py  mock_schema.sql  seed_data.sql
app/formatter/: response_formatter.py
app/guardrails/: sql_validator.py
app/llm/: base.py  factory.py  gemini_provider.py
app/llm/prompts/: templates.py
app/schema/: annotations.yaml  context_builder.py  db_relationships.yaml  introspector.py  schema_cache.yaml
docs/: ARCHITECTURE.md  DATABASE_SETUP.md  GUIDE.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/components/: ChartRenderer.tsx  ChatArea.tsx  ChatInput.tsx  ChatMessage.tsx  ExampleChips.tsx  ExportMenu.tsx  Sidebar.tsx  ThemeToggle.tsx  TypingIndicator.tsx
frontend/src/hooks/: useConversations.ts
frontend/src/lib/: api.ts  export.ts  utils.ts
frontend/src/types/: index.ts
streamlit_app/: app.py
tests/: test_benchmark.py  test_formatter.py  test_guardrails.py  test_pipeline.py  test_schema.py
