[project]
name = "college-chatbot"
version = "1.0.0"
description = "Natural Language to SQL chatbot for college data platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.35",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "google-genai>=1.0.0",
    "sqlparse>=0.5.1",
    "pyyaml>=6.0.2",
    "streamlit>=1.39.0",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "httpx>=0.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
]
